--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@
 #logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-#spring.datasource.url=jdbc:mysql://localhost:3306/lpbd?useTimezone\=true&serverTimezone\=UTC
-#spring.datasource.username=root
-#spring.datasource.password=Aleixo@123
-spring.datasource.url=jdbc:mysql://165.227.207.38:3306/lpbd?useTimezone\=true&serverTimezone\=UTC
-spring.datasource.username=lpbd
+spring.datasource.url=jdbc:mysql://localhost:3306/lpbd?useTimezone\=true&serverTimezone\=UTC
+spring.datasource.username=root
 spring.datasource.password=Aleixo@123
+#spring.datasource.url=jdbc:mysql://165.227.207.38:3306/lpbd?useTimezone\=true&serverTimezone\=UTC
+#spring.datasource.username=lpbd
+#spring.datasource.password=Aleixo@123
 spring.jpa.hibernate.ddl-auto=validate
 
